:beetle: Fix recruit button on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,13 +40,6 @@ h1 {
     width: 49%;
 }
 
-@media (max-width: 767.98px) {
-    .card {
-        width: 100%;
-        padding: 5px;
-    }
-}
-
 .card:hover {
     box-shadow: 0 0 15px rgba(33,33,33,.2);
 }
@@ -205,6 +198,13 @@ html {
     color: #777;
 }
 
-  
+@media (max-width: 767.98px) {
+    .card {
+        width: 100%;
+        padding: 5px;
+    }
 
-
+    #recruit-button {
+        width: 100%;
+    }
+}
